Fix broken docs
Upgraded to vuepress 2.0.0-rc.2

--- a/package.json
+++ b/package.json
@@ -1,93 +1,95 @@
 {
-  "name": "@aedart/ion-monorepo",
-  "description": "Monorepo for JS / TS packages",
-  "keywords": [
-    "Ion",
-    "Library"
-  ],
-  "author": "Alin Eugen Deac",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/aedart/ion/issues"
-  },
-  "homepage": "https://aedart.github.io/ion/",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aedart/ion.git"
-  },
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.23.7",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-transform-class-static-block": "^7.23.4",
-    "@babel/preset-env": "^7.23.8",
-    "@lerna-lite/changed": "^3.2.1",
-    "@lerna-lite/cli": "^3.2.1",
-    "@lerna-lite/list": "^3.2.1",
-    "@lerna-lite/run": "^3.2.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "@vue/server-renderer": "^3.4.15",
-    "@vuepress/plugin-back-to-top": "^2.0.0-rc.0",
-    "@vuepress/plugin-search": "^2.0.0-rc.0",
-    "babel-loader": "^9.1.3",
-    "cpx2": "^7.0.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.9.1",
-    "eslint": "^8.56.0",
-    "install": "^0.13.0",
-    "jasmine": "^5.1.0",
-    "karma": "^6.4.2",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^5.1.0",
-    "karma-spec-reporter": "^0.0.36",
-    "karma-webpack": "^5.0.0",
-    "npm": "^10.4.0",
-    "nx": "^17.2.8",
-    "prettier": "^3.2.4",
-    "puppeteer": "^21.9.0",
-    "rollup": "^4.9.6",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-vue": "^6.0.0",
-    "sass-loader": "^14.0.0",
-    "style-loader": "^3.3.4",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vuepress": "^2.0.0-rc.1",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "clean": "lerna clean && sh clean.sh",
-    "build": "lerna run compile && sh clean.sh",
-    "compile": "lerna run compile && sh clean.sh",
-    "cache:clear": "npx nx reset",
-    "watch": "lerna run watch",
-    "lint": "eslint .",
-    "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.js",
-    "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
-    "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
-    "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
-    "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts"
-  },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "not dead"
-  ]
+    "name": "@aedart/ion-monorepo",
+    "description": "Monorepo for JS / TS packages",
+    "keywords": [
+        "Ion",
+        "Library"
+    ],
+    "author": "Alin Eugen Deac",
+    "license": "BSD-3-Clause",
+    "bugs": {
+        "url": "https://github.com/aedart/ion/issues"
+    },
+    "homepage": "https://aedart.github.io/ion/",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aedart/ion.git"
+    },
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
+    "devDependencies": {
+        "@babel/cli": "^7.23.4",
+        "@babel/core": "^7.23.7",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.23.7",
+        "@babel/plugin-proposal-private-methods": "^7.18.6",
+        "@babel/plugin-transform-class-static-block": "^7.23.4",
+        "@babel/preset-env": "^7.23.8",
+        "@lerna-lite/changed": "^3.2.1",
+        "@lerna-lite/cli": "^3.2.1",
+        "@lerna-lite/list": "^3.2.1",
+        "@lerna-lite/run": "^3.2.1",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-replace": "^5.0.5",
+        "@typescript-eslint/eslint-plugin": "^6.19.1",
+        "@typescript-eslint/parser": "^6.19.1",
+        "@vue/server-renderer": "^3.4.15",
+        "@vuepress/plugin-back-to-top": "^2.0.0-rc.1",
+        "@vuepress/plugin-search": "^2.0.0-rc.1",
+        "@vuepress/theme-default": "^2.0.0-rc.1",
+        "@vuepress/bundler-webpack": "^2.0.0-rc.2",
+        "babel-loader": "^9.1.3",
+        "cpx2": "^7.0.1",
+        "cross-env": "^7.0.3",
+        "css-loader": "^6.9.1",
+        "eslint": "^8.56.0",
+        "install": "^0.13.0",
+        "jasmine": "^5.1.0",
+        "karma": "^6.4.2",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-firefox-launcher": "^2.1.2",
+        "karma-jasmine": "^5.1.0",
+        "karma-spec-reporter": "^0.0.36",
+        "karma-webpack": "^5.0.0",
+        "npm": "^10.4.0",
+        "nx": "^17.2.8",
+        "prettier": "^3.2.4",
+        "puppeteer": "^21.9.0",
+        "rollup": "^4.9.6",
+        "rollup-plugin-delete": "^2.0.0",
+        "rollup-plugin-dts": "^6.1.0",
+        "rollup-plugin-scss": "^4.0.0",
+        "rollup-plugin-typescript2": "^0.36.0",
+        "rollup-plugin-vue": "^6.0.0",
+        "sass-loader": "^14.0.0",
+        "style-loader": "^3.3.4",
+        "tslib": "^2.6.2",
+        "typescript": "^5.3.3",
+        "vuepress": "^2.0.0-rc.2",
+        "webpack": "^5.90.0",
+        "webpack-cli": "^5.1.4"
+    },
+    "scripts": {
+        "bootstrap": "lerna bootstrap",
+        "clean": "lerna clean && sh clean.sh",
+        "build": "lerna run compile && sh clean.sh",
+        "compile": "lerna run compile && sh clean.sh",
+        "cache:clear": "npx nx reset",
+        "watch": "lerna run watch",
+        "lint": "eslint .",
+        "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.js",
+        "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
+        "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
+        "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
+        "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts"
+    },
+    "browserslist": [
+        "last 1 version",
+        "> 1%",
+        "not dead"
+    ]
 }
