--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -54,6 +54,7 @@
     "peerDependencies": {
         "@types/luxon": "^3.4.2",
         "@vuepress/bundler-webpack": "^2.0.0-rc.2",
+        "@vuepress/utils": "^2.0.0-rc.2",
         "luxon": "^3.4.4",
         "tslib": "^2.6.2",
         "vue": "^3.2.47",
