--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "workspaces": [
         "packages/*"
     ],
+    "engines": {
+        "node": "^20.11.0"
+    },
     "devDependencies": {
         "@babel/cli": "^7.23.4",
         "@babel/core": "^7.23.7",
