--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -38,6 +38,11 @@
             "import": "./dist/esm/misc.js",
             "require": "./dist/cjs/misc.cjs"
         },
+        "./mixins": {
+            "types": "./dist/types/mixins.d.ts",
+            "import": "./dist/esm/mixins.js",
+            "require": "./dist/cjs/mixins.cjs"
+        },
         "./objects": {
             "types": "./dist/types/objects.d.ts",
             "import": "./dist/esm/objects.js",
