--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -36,6 +36,11 @@
             "import": "./dist/esm/support.js",
             "require": "./dist/cjs/support.cjs"
         },
+        "./support/concerns": {
+            "types": "./dist/types/support/concerns.d.ts",
+            "import": "./dist/esm/support/concerns.js",
+            "require": "./dist/cjs/support/concerns.cjs"
+        },
         "./support/meta": {
             "types": "./dist/types/support/meta.d.ts",
             "import": "./dist/esm/support/meta.js",
