--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -28,6 +28,11 @@
             "import": "./dist/esm/support.js",
             "require": "./dist/cjs/support.cjs"
         },
+        "./concerns": {
+            "types": "./dist/types/concerns.d.ts",
+            "import": "./dist/esm/concerns.js",
+            "require": "./dist/cjs/concerns.cjs"
+        },
         "./meta": {
             "types": "./dist/types/meta.d.ts",
             "import": "./dist/esm/meta.js",
