--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -31,6 +31,11 @@
             "import": "./dist/esm/contracts.js",
             "require": "./dist/cjs/contracts.cjs"
         },
+        "./container": {
+            "types": "./dist/types/container.d.ts",
+            "import": "./dist/esm/container.js",
+            "require": "./dist/cjs/container.cjs"
+        },
         "./support": {
             "types": "./dist/types/support.d.ts",
             "import": "./dist/esm/support.js",
