--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
         "baseUrl": ".",
         /* Specify the base directory to resolve non-relative module names. */
         "paths": {
+            "@aedart/container/*": [
+                "./packages/container/src/*"
+            ],
             "@aedart/contracts/*": [
                 "./packages/contracts/src/*"
             ],
@@ -145,6 +148,9 @@
         "node_modules"
     ],
     "references": [
+        {
+            "path": "./packages/container"
+        },
         {
             "path": "./packages/contracts"
         },
