Fix missing tslib as peer dependency

--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -81,7 +81,8 @@
     "peerDependencies": {
         "@aedart/contracts": "^0.10.0",
         "@types/lodash-es": "^4.17.12",
-        "lodash-es": "^4.17.21"
+        "lodash-es": "^4.17.21",
+        "tslib": "^2.6.2"
     },
     "scripts": {
         "compile": "rollup -c",
