--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
         "node": "^20.11.0"
     },
     "devDependencies": {
-        "@babel/cli": "^7.23.4",
-        "@babel/core": "^7.23.7",
+        "@babel/cli": "^7.23.9",
+        "@babel/core": "^7.24.0",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.23.7",
         "@babel/plugin-proposal-private-methods": "^7.18.6",
         "@babel/plugin-transform-class-static-block": "^7.23.4",
         "@babel/preset-env": "^7.23.8",
+        "@babel/runtime": "^7.24.0",
         "@lerna-lite/changed": "^3.2.1",
         "@lerna-lite/cli": "^3.2.1",
         "@lerna-lite/list": "^3.2.1",
