--- a/packages/container/tsconfig.json
+++ b/packages/container/tsconfig.json
@@ -8,5 +8,7 @@
   "include": [
     "./src/**/*"
   ],
-  "references": []
+  "references": [
+      { "path": "../contracts", "prepend": false }
+  ]
 }
