Fix "not under root dir" TypeScript waning for "support" package

--- a/packages/container/tsconfig.json
+++ b/packages/container/tsconfig.json
@@ -9,6 +9,7 @@
     "./src/**/*"
   ],
   "references": [
-      { "path": "../contracts", "prepend": false }
+      { "path": "../contracts", "prepend": false },
+      { "path": "../support", "prepend": false },
   ]
 }
