Fix NOTICE file not included in distributions

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -84,7 +84,8 @@
     },
     "files": [
         "dist",
-        "!dist/**/*.map"
+        "!dist/**/*.map",
+        "NOTICE"
     ],
     "scripts": {
         "compile": "rollup -c",
