--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -33,7 +33,8 @@
     },
     "files": [
         "dist",
-        "!dist/**/*.map"
+        "!dist/**/*.map",
+        "NOTICE"
     ],
     "peerDependencies": {
         "@aedart/contracts": "^0.10.0",
