--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -49,7 +49,8 @@
     },
     "files": [
         "dist",
-        "!dist/**/*.map"
+        "!dist/**/*.map",
+        "NOTICE"
     ],
     "peerDependencies": {
         "@types/luxon": "^3.4.2",
