Add @import-meta-env/babel as dev dependency

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@babel/plugin-transform-class-static-block": "^7.23.4",
         "@babel/preset-env": "^7.23.8",
         "@babel/runtime": "^7.24.0",
+        "@import-meta-env/babel": "^0.4.5",
         "@lerna-lite/changed": "^3.2.1",
         "@lerna-lite/cli": "^3.2.1",
         "@lerna-lite/list": "^3.2.1",
@@ -43,10 +44,10 @@
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
         "@vue/server-renderer": "^3.4.15",
+        "@vuepress/bundler-webpack": "^2.0.0-rc.2",
         "@vuepress/plugin-back-to-top": "^2.0.0-rc.1",
         "@vuepress/plugin-search": "^2.0.0-rc.1",
         "@vuepress/theme-default": "^2.0.0-rc.1",
-        "@vuepress/bundler-webpack": "^2.0.0-rc.2",
         "babel-loader": "^9.1.3",
         "cpx2": "^7.0.1",
         "cross-env": "^7.0.3",
