--- a/babel.config.json
+++ b/babel.config.json
@@ -17,6 +17,14 @@
         ],
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-private-methods",
-        "@babel/plugin-transform-class-static-block"
+        "@babel/plugin-transform-class-static-block",
+        [
+            "module:@import-meta-env/babel",
+            {
+                "example": ".env.example",
+                "env": ".env",
+                "transformMode": "compile-time"
+            }
+        ]
     ]
 }
