--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
         "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
         "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
         "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
-        "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts"
+        "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts",
+        "make:env": "cp -u .env.example .env"
     },
     "browserslist": [
         "last 1 version",
