--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -38,6 +38,11 @@
             "import": "./dist/esm/concerns.js",
             "require": "./dist/cjs/concerns.cjs"
         },
+        "./env": {
+            "types": "./dist/types/env.d.ts",
+            "import": "./dist/esm/env.js",
+            "require": "./dist/cjs/env.cjs"
+        },
         "./container": {
             "types": "./dist/types/container.d.ts",
             "import": "./dist/esm/container.js",
