Change Env.get() to convert values
Also added a test of values parsed from the root .env file.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,18 @@
 
 # Foo / Bar example variable...
 FOO=BAR
+
+# Null
+NULL_VAL_TRUE=null
+
+# Boolean values
+BOOL_VAL_TRUE=true
+BOOL_VAL_FALSE=false
+
+# String values
+STR_VAL_EMPTY=
+STR_VAL_NO_QUOTE=Okay # Unquoted...
+STR_VAL_SINGLE_QUOTE='Beauty is a rainy whale.'
+STR_VAL_DOUBLE_QUOTE="Arrr, endurance!"
+STR_VAL_MULTI_LINE="Ares de fin.
+Mu verci."
