--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ STR_VAL_SINGLE_QUOTE='Beauty is a rainy whale.'
 STR_VAL_DOUBLE_QUOTE="Arrr, endurance!"
 STR_VAL_MULTI_LINE="Ares de fin.
 Mu verci."
+
+# Application Environment
+APP_ENV=testing
