--- a/package.json
+++ b/package.json
@@ -43,15 +43,14 @@
         "@typescript-eslint/eslint-plugin": "^8.7.0",
         "@typescript-eslint/parser": "^8.7.0",
         "@vue/server-renderer": "^3.5.8",
+        "@vuepress/bundler-webpack": "^2.0.0-rc.15",
         "@vuepress/plugin-back-to-top": "^2.0.0-rc.47",
         "@vuepress/plugin-search": "^2.0.0-rc.47",
         "@vuepress/theme-default": "^2.0.0-rc.49",
-        "@vuepress/bundler-webpack": "^2.0.0-rc.15",
         "babel-loader": "^9.2.1",
         "cpx2": "^7.0.1",
         "cross-env": "^7.0.3",
         "css-loader": "^7.1.2",
-        "eslint": "^9.11.1",
         "install": "^0.13.0",
         "jasmine": "^5.3.0",
         "karma": "^6.4.4",
@@ -76,7 +75,8 @@
         "typescript": "^5.6.2",
         "vuepress": "^2.0.0-rc.15",
         "webpack": "^5.95.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "typescript-eslint": "^8.7.0"
     },
     "overrides": {
         "karma-jasmine": {
