--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "rollup-plugin-typescript2": "^0.36.0",
         "rollup-plugin-vue": "^6.0.0",
         "sass-loader": "^16.0.2",
+        "sass": "^1.79.3",
         "style-loader": "^4.0.0",
         "tslib": "^2.7.0",
         "typescript": "^5.6.2",
