--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@aedart/vuepress-utils",
-    "version": "0.12.1",
+    "version": "0.13.0",
     "description": "A few utilities for Vuepress.",
     "keywords": [
         "Vuepress",
@@ -57,10 +57,10 @@
         "@vuepress/bundler-webpack": "^2.0.0-rc.15",
         "@vuepress/utils": "^2.0.0-rc.15",
         "luxon": "^3.5.0",
+        "sass": "^1.79.3",
         "tslib": "^2.7.0",
         "vue": "^3.5.8",
-        "vuepress": "^2.0.0-rc.15",
-        "sass": "^1.79.3"
+        "vuepress": "^2.0.0-rc.15"
     },
     "scripts": {
         "compile": "rollup -c && npx cpx \"src/**/*.vue\" dist",
