--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "dotenv": "^16.4.5",
         "install": "^0.13.0",
         "jasmine": "^5.3.0",
+        "@types/jasmine": "^5.1.4",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
         "karma-firefox-launcher": "^2.1.3",
