--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -31,6 +31,11 @@
             "import": "./dist/esm/contracts.js",
             "require": "./dist/cjs/contracts.cjs"
         },
+        "./config": {
+            "types": "./dist/types/config.d.ts",
+            "import": "./dist/esm/config.js",
+            "require": "./dist/cjs/config.cjs"
+        },
         "./container": {
             "types": "./dist/types/container.d.ts",
             "import": "./dist/esm/container.js",
