Add config package as peer dependency

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,7 @@
         "NOTICE"
     ],
     "peerDependencies": {
+        "@aedart/config": "^0.13.0",
         "@aedart/container": "^0.13.0",
         "@aedart/contracts": "^0.13.0",
         "@aedart/support": "^0.13.0"
