Fix @aedart/config not under root dir

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -9,6 +9,7 @@
     "./src/**/*"
   ],
   "references": [
+      { "path": "../config", "prepend": false },
       { "path": "../container", "prepend": false },
       { "path": "../contracts", "prepend": false },
       { "path": "../support", "prepend": false },
