--- a/babel.config.json
+++ b/babel.config.json
@@ -17,6 +17,8 @@
         ],
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-private-methods",
-        "@babel/plugin-transform-class-static-block"
+        "@babel/plugin-transform-class-static-block",
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-attributes"
     ]
 }
