--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
         "baseUrl": ".",
         /* Specify the base directory to resolve non-relative module names. */
         "paths": {
+            "@aedart/cli/*": [
+                "./packages/cli/src/*"
+            ],
             "@aedart/config/*": [
                 "./packages/config/src/*"
             ],
@@ -154,6 +157,9 @@
         "node_modules"
     ],
     "references": [
+        {
+            "path": "./packages/cli"
+        },
         {
             "path": "./packages/config"
         },
