--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,10 @@
     ],
     "peerDependencies": {
         "@aedart/contracts": "^0.13.0",
-        "@aedart/support": "^0.13.0"
+        "@aedart/support": "^0.13.0",
+        "commander": "^12.1.0",
+        "inquirer": "^12.0.0",
+        "chalk": "^5.3.0"
     },
     "scripts": {
         "compile": "rollup -c",
