--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,9 @@
             "require": "./dist/cjs/cli.cjs"
         }
     },
+    "bin": {
+        "ion": "./bin/index.js"
+    },
     "files": [
         "dist",
         "!dist/**/*.map",
