--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
         "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.js",
         "test:fast": "karma start shared/tests/karma-development.conf.js",
         "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
-        "test:cli": "node --test \"tests/cli/**/*.js\" \"tests/cli/**/**/*.js\"",
+        "test:cli": "node --test \"tests/cli/**/*.test.js\" \"tests/cli/**/**/*.test.js\"",
         "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
         "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
         "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts",
