Enable testing of cli packages

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -65,6 +65,9 @@ jobs:
 
             - name: "Lint"
               run: npm run lint
+
+            - name: "Test (Cli)"
+              run: npm run test:cli
         
-            - name: "Test"
+            - name: "Test (Browser)"
               run: npm run test
