Change installation to use "ci" instead of "install"

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -58,7 +58,7 @@ jobs:
             # ------------------------------------------------------------------------------------------------------- #
     
             - name: "Install dependencies"
-              run: npm install
+              run: npm ci
 
             - name: "Make .env file"
               run: npm run make:env
