Add ts-node as dev dependency
Seems that karma might use this behind the scene.

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "sass": "^1.79.3",
         "style-loader": "^4.0.0",
         "tslib": "^2.7.0",
+        "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
         "vuepress": "^2.0.0-rc.15",
         "webpack": "^5.95.0",
@@ -96,9 +97,9 @@
         "cache:clear": "npx nx reset",
         "watch": "lerna run watch",
         "lint": "eslint .",
-        "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.js",
-        "test:fast": "karma start shared/tests/karma-development.conf.js",
-        "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
+        "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.cjs",
+        "test:fast": "karma start shared/tests/karma-development.conf.cjs",
+        "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.cjs",
         "test:cli": "node --test \"tests/cli/**/*.test.js\" \"tests/cli/**/**/*.test.js\"",
         "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
         "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
