--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -11,5 +11,6 @@
   "references": [
       { "path": "../contracts", "prepend": false },
       { "path": "../support", "prepend": false },
+      { "path": "../core", "prepend": false },
   ]
 }
